test/bad/classes/super04.px

class A def
    constructor() def
        super()
